--- a/Modification_to__the_image_video_animation_generation.ipynb
+++ b/Modification_to__the_image_video_animation_generation.ipynb
@@ -308,7 +308,7 @@
         "id": "7JWCVDHf3sYu",
         "outputId": "b66b5031-1027-4861-d23e-7cac67208949"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -363,7 +363,7 @@
         "id": "6Owfxz0V3uov",
         "outputId": "e7a57df1-552d-4048-f7f1-e1e3f0c2e8d9"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -402,7 +402,7 @@
         "id": "1bkyp74E3wcl",
         "outputId": "7f81ba6d-d260-433e-dcd5-d68ef301419a"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -436,7 +436,7 @@
       "metadata": {
         "id": "exOI3-Rd3yn8"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -481,7 +481,7 @@
         "outputId": "ab1f1a44-a7bb-4b5a-c1a0-4c802daa1f2a",
         "cellView": "form"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -516,7 +516,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "\n",
+        "https://drive.google.com/file/d/1rqZkxlqr7c4i_JNiMBmubiQhLA3m6M6V/view?usp=drivesdk\n",
         "# **VIDEO PRESENTATION LINK**"
       ],
       "metadata": {
